# piler

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  tools.sh
coreclient/: Cargo.toml  README.md
coreclient/src/: app.rs  client.rs  font.rs  identicon.rs  lib.rs
coreclient/src/app/: mod.rs  render.rs
coreclient/src/csil/: client.rs  mod.rs  types.rs
coredb/: coredb.go  go.mod
coredb/migrations/: 000001_baseline.sql
csil/: piler.csil  regenerate.sh
docs/: README.md  architecture.md  positioning.md  roadmap.md  testing.md  transport-and-auth.md
memory/: MEMORY.md  canvas-text-input-pattern.md
server/: README.md  go.mod  go.sum  main.go
server/cmd/: cli.go  migrate.go  serve.go  smoke.go
server/internal/config/: config.go
server/internal/csil/: services.gen.go  types.gen.go
server/internal/messages/: codec.go  conn.go  dispatcher.go  dispatcher_test.go  errors.go  handshake.go  handshake_test.go  ops.go
server/internal/rpc/: conn.go  dispatcher.go  dispatcher_test.go  errors.go
server/internal/store/: postgres.go  store.go
server/internal/transport/: runner.go  tcp.go  tcp_test.go  ws.go
server/internal/world/: bots.go  move.go  world.go  world_test.go
webclient/: Cargo.toml  README.md  canvas-test.html  index.html
webclient/src/: lib.rs
webclient/web/: index.html  package-lock.json  package.json  vite.config.ts
webclient/web/src/: main.ts
webclient/web/src/api/: types.gen.ts
