[package]
name = "piler-coreclient"
# Client semver, independent of the server and of the API version.
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic game client core for piler (native + WASM)."

[lib]
# A plain rlib: this crate has NO host/wasm-specific code so it stays
# native-testable. The wasm-bindgen layer lives in `webclient`, which
# depends on this.
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"

[dev-dependencies]
