[package]
name = "piler-webclient"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser host: wraps the piler core App as WASM (framebuffer + input)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piler-coreclient = { path = "../coreclient" }
wasm-bindgen = "0.2"
js-sys = "0.3"
